UX-Q7 — Mermaid PNG embed (PDF fix) + Atlassian Cloud Confluence publisher
Fixes a real reported bug + adds a real new capability:

Phase A — Mermaid PDF rendering:
- mmdc now invoked with `-o foo.png --backgroundColor white --width 1400
  --scale 2` (PNG output via puppeteer screenshot — no SVG intermediate).
- MarkdownPdfRenderer placeholder swap injects
  `<img src="data:image/png;base64,...">` instead of inline `<svg>`,
  which Flying Saucer + OpenPDF render cleanly.
- BRAIN_DOCS_MERMAID_OUTPUT_FORMAT=png|svg (default png) keeps the
  legacy SVG path available for HTML preview surfaces.
- Tunables: BRAIN_DOCS_MERMAID_RENDER_WIDTH (1400) and
  BRAIN_DOCS_MERMAID_RENDER_SCALE (2) for crisp diagrams.

Phase B — Confluence Cloud client + storage renderer + publisher:
- BrainProperties.Confluence (enabled, host, email, apiToken,
  defaultSpaceKey, defaultParentPageId, publishOnPrMerge).
- ConfluenceClient — Basic-auth (email + API token) REST client for
  create/update page and multipart attachment upload (X-Atlassian-Token:
  no-check).
- ConfluenceStorageRenderer — markdown → Confluence storage format:
  data-URI images become `<ac:image><ri:attachment>` references,
  fenced code blocks become `<ac:structured-macro name="code">`, GFM
  tables pass through.
- ConfluencePublisherService — orchestrates create-or-update:
  - Same target as stored → UPDATE with version+1
  - Different target → CREATE fresh page (per user direction)
  - Disabled / missing target → SKIPPED
  - Failure → FAILED (caller logs, doesn't fail bundle)

Phase C — Doc-bundle integration:
- POST /api/v1/docs/{id}/publish/confluence with body
  `{spaceKey, parentPageId}` triggers create or update.
- @PreAuthorize canWriteDocument; HTTP 200 CREATED/UPDATED, 207 PARTIAL,
  409 SKIPPED, 502 FAILED.

Phase D — PR-merge auto-update:
- LearningController.analyzeMerge looks up the most recent
  GeneratedDocument with confluence_page_id IS NOT NULL for the
  project; if found AND brain.confluence.enabled AN